[package]
name = "torrent-search"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hex = "0.4"
url = "2.5"

# Para el tracker scraper
[dependencies.udp-tracker-client]
version = "0.3"
optional = true

[features]
default = ["scraper-mode"]
scraper-mode = ["udp-tracker-client"]

[[bin]]
name = "torrent-search"
path = "src/main.rs"

[[bin]]
name = "tracker-scraper"
path = "src/tracker_scraper.rs"
required-features = ["scraper-mode"]
