[package]
name = "torrent-search"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
rand = "0.8"

[[bin]]
name = "torrent-search"
path = "main.rs"

[[bin]]
name = "tracker-scraper"
path = "tracker_scraper.rs"